feat: Member 도메인 구현 및 테스트 코드 작성
- Auth 도메인 구현
  -JWT(토큰), Redis(Refresh Token), BCrypt(비밀번호 암호화)
  -API(회원가입, 로그인, 토큰 갱신, 로그아웃) 추가

- Member 도메인 구현
  -Member, MemberGrade, MemberStatus 추가
  -API(정보 조회, 정보 수정, 회원 탈퇴, 로켓와우 구독, 로켓와우 취소) 추가

- 테스트 코드 작성 (WebFluxTest + StepVerifier)

- REST Docs 설정 및 API 문서화

- WebFlux + R2DBC 기반 리액티브 아키텍처

- 프로젝트 문서 업데이트 (claude.md, readme.md)

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.0'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
 }
 
 group = 'com.example'
@@ -15,6 +16,7 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    asciidoctorExt
 }
 
 repositories {
@@ -58,8 +60,34 @@ dependencies {
     testImplementation 'io.projectreactor:reactor-test'
     testRuntimeOnly 'io.r2dbc:r2dbc-h2'
     testRuntimeOnly 'com.h2database:h2'
+
+    // REST Docs
+    testImplementation 'org.springframework.restdocs:spring-restdocs-webtestclient'
+    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
+
+    // Mockito
+    testImplementation 'org.mockito:mockito-core:5.8.0'
+}
+
+ext {
+    snippetsDir = file('build/generated-snippets')
 }
 
 test {
     useJUnitPlatform()
+    outputs.dir snippetsDir
+}
+
+asciidoctor {
+    inputs.dir snippetsDir
+    configurations 'asciidoctorExt'
+    dependsOn test
+    baseDirFollowsSourceFile()
+}
+
+bootJar {
+    dependsOn asciidoctor
+    from("${asciidoctor.outputDir}") {
+        into 'static/docs'
+    }
 }
