fix: 데이터베이스 스키마 초기화 - V1__init_schema.sql: Flyway 마이그레이션 파일 생성   - members 테이블 DDL (회원 정보, 로켓와우 정보)   - addresses 테이블 DDL (배송지 정보)   - 인덱스 설정 (email, phone, status, member_id)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
 
   flyway:
     enabled: true
-    url: jdbc:mysql://localhost:3306/ecommerce?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/ecommerce?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     user: root
     password: password
     baseline-on-migrate: true
@@ -69,7 +69,7 @@ spring:
     password: ${SPRING_R2DBC_PASSWORD:password}
 
   flyway:
-    url: ${SPRING_FLYWAY_URL:jdbc:mysql://mysql:3306/ecommerce}
+    url: ${SPRING_FLYWAY_URL:jdbc:mysql://mysql:3306/ecommerce?useSSL=false&allowPublicKeyRetrieval=true}
     user: ${SPRING_FLYWAY_USER:root}
     password: ${SPRING_FLYWAY_PASSWORD:password}
 
