--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -30,11 +30,11 @@ spring:
                 name: productCircuitBreaker
                 fallbackUri: forward:/fallback/product
 
-        # Order Service Routes (future)
+        # Order Service Routes
         - id: order-service
           uri: http://localhost:8083
           predicates:
-            - Path=/api/v1/orders/**, /api/v1/cart/**, /api/v1/payments/**
+            - Path=/api/v1/orders/**, /api/v1/cart/**, /api/v1/payments/**, /api/v1/deliveries/**
           filters:
             - name: CircuitBreaker
               args:
